static/css/base.css
@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&family=Montserrat&display=swap');


/* Project-level Preferences */
html {
    min-height: 100%;
    position: relative;
}

body {
    background-size: cover;
    color: #100f10;
    font-family: 'Montserrat';
    margin-bottom: 35vh;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Arvo';
}

a,
a:hover {
    text-decoration: none;
}

ul {
    list-style-type: none;
}


/* Navigation */

.sidebar {
    background-image: linear-gradient(to bottom, #008763,#3b0022);
    display: flex;
    height: 100%;
    position: fixed;
    width: 16.7%;
    z-index: 2;
}

nav ul a:hover {
    background-color: #f0eee9;
    color: #008763;
    font-weight: 800;
}

.sidebar .row a {
    /* Overwrites default Bootstrap parameters */
    color:#f0eee9;
}

.sidebar ul {
    padding-left: 0;
}

#site-logo {
    padding-top: 4vh;
    padding-bottom: 4vh;
}

li.nav-option {
    font-weight: 600;
    line-height: 1.25em;
    text-transform: uppercase;
    width: 100%;
}

li.nav-option:hover,
li.nav-option a:hover {
    background-color: #f0eee9;
    color: #008763;
}

li.nav-option#site-logo:hover,
li.nav-option.social-panel:hover {
    background-color: transparent;
}

li.nav-option.social-panel .col:hover {
    background-color: transparent;
    border-color: #f0eee9;
}

li.nav-option.social-panel div a:hover {
    background-color: transparent;
}

nav ul a {
    /* Overwrites default Bootstrap parameters */
    color: #f0eee9;
    height: 100%;
    padding: 0 0 0 0;
}

.fa, .far, .fas {
    /* Overwrites default Font Awesome parameters */
    line-height: 0em;
}

.account-icon {
    font-size: 1em;
}

nav div a#cart-full {
    /* cart-full replaces cart-empty upon items being added to the customer's cart */
    color: #ceca03;
    font-weight: 800;
}

.sidebar #site-logo img {
    max-width: 100%;
    padding-left: 0em;
}

nav ul #site-logo a:hover {
    background-color: transparent;
}

.social-icon {
    font-size: 1.5em;
    padding-bottom: 0.5em;  
    padding-left: 0.5em;
    padding-right: 0.5em;
    padding-top: 0.5em;
}

.social-icon:hover {
    color:#008763;
}

/* Mobile Navbar - Overwriting default Bootstrap parameters */

.navbar {
    text-transform: uppercase;
}

#mobile-logo {
    max-height: 7.5vh;
}

.navbar-toggler {
    color: #f0eee9;
}

.navbar-toggler {
    border-color: transparent;
}

.navbar-toggler:focus {
    box-shadow: 0 0 0 0rem;
}

li.nav-item {
    font-weight: 600;
}

.dropdown-item:active {
    background-color: #008763;
    color: #f0eee9;
}

.dropdown-item:focus {
    background-color: #008763;
    color: #f0eee9;
}


/* Main */

main {
    margin-bottom: 20px;
    margin-top: 20px;
}


.page-header {
    height: 12vh;
}

.row.message-row {
    margin-bottom: 0px;
}

.messages-container {
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
}

a.view-cart-toast:hover {
    /* Overwrites default Bootstrap parameters */
    color: #008763;
}


/* Desktop Footer */

footer {
    bottom: 0;
    position: absolute;
    width: 100%;
}

.info-box {
    padding-bottom: 2.5vh;
    padding-left: 5vh;
    padding-right: 5vh;
    padding-top: 2.5vh;
}

.info-box .address-box div {
    font-size: 12px;
    line-height: 1;
    padding: 12px;
}

.info-box .address-box h6 {
    line-height: 1;
    margin: 0px;
    padding: 12px;
}


/* Index */

.landing-header {
    height: 40vh;
}

.landing-box img {
    height: 40vh;
    width: 100%;
}

.row .col.landing-box {
    padding: 0 0 0 0;
}

.card {
    border: 0px;
    padding: 10px;
}

.card .card-body h4.card-title {
    /* Overwrites default Bootstrap parameters */
    color: #3b0022;
}


/* Buttons - all btn items are overwrites of Bootstrap parameters */

.btn-outline-success {
    border-color: #008763;
    color: #008763;
}

.btn-outline-success:active,
.btn-outline-success:hover {
    background-color: #008763;
    border-color: #008763;
    color: #f0eee9;
}

.btn-outline-success a i:hover,
.btn-outline-success a:hover,
.btn-outline-success i:hover,
.btn-outline-danger a i:hover,
.btn-outline-danger i:hover {
    color: #f0eee9;
}

.btn-outline-danger {
    border-color: #e64757;
    color: #e64757;
}

.btn-outline-danger:hover {
    background-color: #e64757;
    border-color: #e64757;
    color: #f0eee9;
}

.btn-outline-warning {
    border-color: #ceca03;
    color: #ceca03;
}

.btn-outline-warning:hover {
    background-color: #ceca03;
    border-color: #ceca03;
    color: #100f10;
}

.btn-outline-warning a i:hover,
.btn-outline-warning i:hover {
    color: #100f10;
}

.btn.btn-small {
    background-color: #f0eee9;
    color: #008763;
    font-weight: 600;
}

.check-eject {
    /* Add Cart, Checkout, Admin and Back To Shop buttons on Product and Cart Views */
    width: 100%;
}

.check-eject a {
    width: 100%;
}


/* Breadcrumb - overwriting default Bootstrap parameters on view_product and view_event */

.breadcrumb {
    background-color: transparent;
    display: inline-block;
    font-size: 10px;
    text-transform: uppercase;
    margin-top: 10vh;
    padding: 0px;
}

.breadcrumb a:hover {
    color: #008763;
    font-weight: 800;
}

.breadcrumb:last-child {
    color: #008763;
    font-weight: 800;
}


/* Crispy-Forms overwrites */

.fieldset-label {
    font-family: 'Arvo';
    font-size: 16px;
}

.form-control {
    font-size: 14px;
    margin-bottom: 5px;
    margin-top: 5px;
}

.form-control:focus {
    border-color: #008763;
    box-shadow: 0 0 0 0.25rem rgb(0 135 99 / 25%);
}


/* Responsiveness */

@media (min-width: 1200px) {
    .container {
        /* taken from CI Boutique Ado, overrides default Bootstrap class on large screen sizes */
        max-width: 85%;
    }
}


@media (max-width: 576px) {

    /* Overwrites default Bootstrap parameters */
    .breadcrumb {
        margin-top: 1vh;
    }
}


@media (min-width: 577px) and (max-width: 1199px) {
    /* Overwrites default Bootstrap parameters */
    .breadcrumb {
        margin-top: 1vh;
    }
}


@media (max-width: 767px) {
    body {
        /* see how these need to be amended for tablet views */
        margin-top: 20%;
        margin-bottom: 20%;
    }

    .landing-header {
        height: 20vh;
    }

    .landing-box img {
        height: 20vh;
        width: 100%;
    }
    
    /* Alternative navigation element for smaller screens */
    .sidebar {
        /* static sidebar is replaced with top navbar on mobile and tablet */
        display: none;
    }

    .navbar-brand {
        margin-right: 0;
    }

    .social-icon,
    .sh-cart-icon {
        font-size: 1.5em;
    }

    nav ul a:active,
    nav ul a:focus,
    nav ul a:hover {
        background-color: #008763;
        color: #f0eee9;
        font-weight: 800;
    }


    /* Main */

    .messages-container {
        margin-top: 1rem;
        padding-right: 0px;
    }

    .mobile-font {
        font-size: 0.75rem;
    }

    /* Tables */

    table.table thead tr {
        font-size: 12px;
    }
}


@media (max-width: 315px) {
    .messages-container {
        margin-top: 1.5rem;
    }
    .social-icon {
        font-size: 1em;
    }
}

